0.33
    - Print a warning if POE catches an exception in our code

0.32  Thu Feb 11 21:03:30 GMT 2010
    - When we're addressed, trim some whitespace after the nickname
    - Make MegaHAL.pm and irchal-seed use the same regex to identify lines
      where the bot is addressed
    - irchal-seed: Remove Encode code in favor of irc_to_utf8 from pocoirc

0.31  Thu Jan 21 21:39:39 GMT 2010
    - irchal-seed: Amend bot-nick-catching regex a bit
    - irchal-seed: Document the --help and --version options
    - Converted distribution over to Module::Install
    - Test irchal-seed with Test::Script

0.30  Tue Jan 19 23:49:23 GMT 2010
    - Fix typo in subroutine name

0.29  Tue Jan 19 23:42:09 GMT 2010
    - Apply English language corrections to initial_greeting too

0.28  Tue Jan 19 23:18:31 GMT 2010
    - irchal-seed: Prepend a space to lines beginning with '#' so MegaHAL
      won't ignore them in megahal.trn
    - irchal-seed: Add a --version option
    - Forgot to decode data from MegaHAL's initial_greeting
    - Depend on POE::Component::IRC 6.20 for some bug fixes

0.27  Sat Nov 14 14:22:06 GMT 2009
    - Fix a problem with the English correction, especially when non-ASCII
      characters are involved

0.26  Fri Nov 13 18:32:41 GMT 2009
    - Various documentation enhancements

0.25  Fri Nov 13 15:28:54 UTC 2009
    - Add English punctuation correction feature

0.24  Fri May  8 11:56:34 UTC 2009
    - Remove some duplicate code which was causing an warning

0.23  Tue May  5 15:03:41 UTC 2009
    - irchal-seed: Always strip color and formatting codes
    - Depend on new PoCo::AI::MegaHAL which has a bugfix

0.22  Tue May  5 13:58:11 GMT 2009
    - irchal-seed: Always output text in UTF-8

0.21  Thu Apr 30 12:58:33 GMT 2009
    - Updated documentation
    - Outsource recoding to irc_to_utf8() of PoCo::IRC 6.06

0.20  Fri Mar 27 19:04:53 GMT 2009
    - Fix error in Makefile.PL

0.19  Wed Mar 25 23:49:54 GMT 2009
    - Forgot to import some functions. Oops.
