@@ -1,5 +1,6 @@
 0.33
     - Print a warning if POE catches an exception in our code
+    - Wait for MegaHAL to save the brain before we quit
 
 0.32  Thu Feb 11 21:03:30 GMT 2010
     - When we're addressed, trim some whitespace after the nickname
